# paperbot

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .template-lintrc.js  .travis.yml  LICENSE  README.md  app - Acceso directo.lnk  bower.json  ember-cli-build.js  package-lock.json  package.json  testem.js
.github/workflows/: ci.yml
app/: app.js  ember - Acceso directo.lnk  index.html  router.js
app/adapters/: application.js  config.js  default.js  pouch.js  request.js  sl-notification.js  slsong.js  song.js
app/authenticators/: pouch.js
app/components/: blog-author-edit.hbs  blog-author-edit.js  blog-author.hbs  blog-author.js  blog-authors.hbs  blog-authors.js  blog-post-edit.hbs  blog-post-edit.js  blog-post.hbs  blog-post.js  blog-posts.hbs  blog-posts.js  bs-offcanvas.hbs  bs-offcanvas.js  button-confirm.hbs  button-confirm.js  cloud-state.hbs  cloud-state.js  color-picker.hbs  color-picker.js  css-validator.hbs  css-validator.js  light-switch.hbs  light-switch.js  lock-button.hbs  lock-button.js  overlay.hbs  overlay.js  page-numbers.hbs  page-numbers.js  pb-client-edit.hbs  pb-client-edit.js  pb-client.hbs  pb-client.js  pb-clients.hbs  pb-clients.js  pb-cloud.hbs  (+78 more)
config/: ember-cli-update.json  environment.js  icons.js  targets.js
electron-app/: package-lock.json  package.json
ember-electron/: .eslintrc.js  electron-forge-config.js  main.js
public/: manifest.json
src/: main.js  resolver.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: index.html  test-helper.js
(+236 files in other folders)
