[package]
name = "app"
version = "0.8.6"
description = "Paperbot"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [] }

[dependencies]
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "system-tray"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release.package.wry]
debug = false
debug-assertions = false
